# fridge_detector

./: Dockerfile  README.md  pyproject.toml
backend/: api.py  detector.py  detector_old.py  helper.py  ingredient_extractor.py  llm.py  rag.py  schemas.py
data/chroma/: chroma.sqlite3
frontend/: streamlit_app.py  style.css
recipes/: build_vector_db.py  recipes.json
tests/: test.py
